more_bug_fixing

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://eseegm97:Ether1227@cse341.sc1svsj.mongodb.net/?appName=cse341&retryWrites=true&w=majority&tls=true
+MONGODB_URI=mongodb+srv://eseegm97:Ether1227@cse341.sc1svsj.mongodb.net/?appName=cse341
