--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb+srv://eseegm97:Ether1227@cse341.sc1svsj.mongodb.net/?appName=cse341&retryWrites=true&w=majority&tls=true
+MONGODB_URI=mongodb+srv://eseegm97:Ether1227@cse341.sc1svsj.mongodb.net/?appName=cse341
+DB_NAME=cse341
+PORT=3000
