--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "description": "lesson 1",
   "homepage": "https://github.com/eseegm97/cse341_lesson1#readme",
-  "bugs": { "url": "https://github.com/eseegm97/cse341_lesson1/issues" },
-  "repository": { "type": "git", "url": "git+https://github.com/eseegm97/cse341_lesson1.git" },
+  "bugs": {
+    "url": "https://github.com/eseegm97/cse341_lesson1/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eseegm97/cse341_lesson1.git"
+  },
   "license": "ISC",
   "author": "Ethan Seegmiller",
-  "engines": { "node": ">=18.0.0" },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
@@ -16,6 +23,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "mongodb": "^7.0.0"
   }
 }
