--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "swagger": "node swagger.js"
   },
   "dependencies": {
     "express": "^5.2.1",
@@ -32,6 +33,8 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.5.5",
-    "prettier": "^3.8.1"
+    "prettier": "^3.8.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "5.0.1"
   }
 }
