--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URI=mongodb+srv://eseegm97:Ether1227@cse341.sc1svsj.mongodb.net/?appName=cse341
 DB_NAME=cse341
 PORT=3000
-SWAGGER_HOST=localhost:3000
+SWAGGER_HOST=localhost:3000,https://cse341-lesson1-r89u.onrender.com
 SWAGGER_SCHEME=http
